[package]
name = "reaction-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version= "0.8.1", features = ["dynamic"]}
bevy_common_assets = { version = "0.3.0", features = ["json"] }
bevy_prototype_lyon = "0.6.0"
rand = "0.8.5"
serde = "1.0.147"
